--- a/Rides.html
+++ b/Rides.html
@@ -1,1 +1,75 @@
-hi
+<!--Website link : http://131.194.71.236:5500/-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="park.css">
+	<title>AmuseMe Rides Decider</title>
+</head>
+
+<body>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<a class="navbar-brand" href="index.html">
+			<img src="img/logo.jpg" height="140" width="300">
+		</a>
+		<div class="navbar-text text-center">
+			<h1 class="display-4">Rides</h1>
+
+		</div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler"
+		 aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarToggler">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="About.html">About</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="Rides.html">Rides</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Events.html">Events</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Contact.html">Contact Us</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+    <div class="row">
+        <div class="card" style="width:500px">
+                <img src="img/Rides img/Extreme Rides.png" class="rounded float-center" width="500px" >
+                  <h4><div class="text-center">Extreme Rides </div></h4>
+                  <p><div class="text-center"> These rides may include going upside down or spinning. Do not ride if you get dizzy easily or are afraid of heights.</div></p>
+                  <a href="Extreme Rides.html" class="btn btn-primary">Go to</a>
+                </div>
+                <div class="card">
+                        <img src="img/Rides img/this or that.png">
+                    </div>
+
+        <div class="card" style="width:500px">
+                <img src="img\Rides img\baby ride.jpg" class="rounded float-center" width="500px" >
+                     <h4><div class="text-center">Easy Rides</div></h4>
+                     <p><div class="text-center"> These rides will not go fast, high or upside down. They are also meant for little kids. </div></p>
+                     <a href="Easy Rides.html" class="btn btn-primary">Go to</a>
+                </div>
+        
+
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	 crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	 crossorigin="anonymous"></script>
+	<script src="javascript.js"></script>
+</body>
+<html>
