--- a/index.html
+++ b/index.html
@@ -5,118 +5,180 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="park.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="park.css">
 	<title>AmuseMe Home</title>
 </head>
-
 <body>
-<div class = "row">
-	<div class="col">
-			<a class="navbar-brand" href="index.html">
-				<img src="img/logo.jpg" height="140" width="300">
-			</a>
+	<nav class="navbar navbar-expand-lg navbar-dark ">
+		<a class="navbar-brand" href="index.html">
+			<img src="img/logo.jpg" height="140" width="300">
+		</a>
+		<div class="navbar-text text-center">
+			<h1 class="display-4">AmuseMe Amusement Park</h1>
+			<p class="lead">Located in Tampa Bay, Florida! Come find us!</p>
+		</div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler"
+		 aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarToggler">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="About.html">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Rides.html">Rides</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Events.html">Events</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Contact.html">Contact Us</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
 
-	</div>
-
-	<div class="conatiner-fluid padding">
-			<div class="row welcome text-center">
-				<div class="col-12">
-					<h1 class="display-4"><br> AmuseMe Park</h1>
-				</div>
-				<hr>
-				<div class="col-12">
-					<p class="lead">Have Fun!
-					</p>
-				</div>
+	<!--Don't delete /div-->
+	<!--Carousel-->
+	<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="img/Index img/Amuseme1.jpg" alt="First slide">
 			</div>
-		</div>	
-
-		
-
-			<div class="col">
-					<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-							<div class="container-fluid">
-								<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-								 aria-expanded="false" aria-label="Toggle navigation">
-									<span class="navbar-toggler-icon"></span>
-								</button>
-								<div class="collapse navbar-collapse" id="navbarResponsive">
-									</ul>
-									<ul class="navbar-nav ml-auto">
-										<li class="nav-item">
-											<a class="nav-link" href="index.html">Home</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" href="About.html">About</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" href="rides.html">Rides</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" href="#">Events</a>
-										</li>
-										<li class="nav-item">
-											<a class="nav-link" href="#">Contact</a>
-										</li>
-									</ul>
-					
-								</div>
-							</div>
-					  </nav>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="img/Index img/Amuseme2.jpg" alt="Second slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="img/Index img/Amuseme3.jpg" alt="Third slide">
 			</div>
 		</div>
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>
+	</div>
 
+
+
+
+	<div class="jumbotron jumbotron-fluid">
+		<div class="container-fluid">
+			<h3 class="display-6">
+				<div class="text-center">AmuseMe Amusement Park </div>
+			</h3>
+			<p class="lead">A great place for fun and rides! Enjoy your time here! </p>
 		
-
-
-<!--Carousel-->
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-	  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="1" class="active"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="2" class="active"></li>
-	</ol>
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<img class="d-block w-100" src="img/Amuseme.jpg"alt="First slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src="img/Amuseme2.jpg" alt="Second slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src="img/Amuseme3.jpg" alt="Third slide">
-	  </div>
+			<div class="wrap">
+			<a href="Tickets.html"  class="btn btn-3">Get Tickets</a>
+			
+			<a href="ParkRules.html" class="btn btn-3">Full Rules List</a>
+			<div>
+			<div class="weather">
+				</div>
+			<div class="temp">
+				</div>
+			<div class="city-name">
+				</div>
+			<div class="country">
+				</div>
+			<button class="submit">Weather</button>
+			</div> 
+			</div>
+		</div>
+		
 	</div>
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Next</span>
-	</a>
-	</div>
-	
 
 
-
-<div class="jumbotron jumbotron-fluid">
-  <div class="container">
-    <h3 class="display-6">AmuseMe Amusement Park</h3>
-    <p class="lead">A great place for fun and rides! Enjoy your time here! </p>
-  </div>
-</div>
-
+<!--
 <div class="conatiner-fluid padding">
-	<div class="row welcome text-center">
+	<div class="row welcome text-mr-auto">
 		<div class="col-12">
-			<p>Explore our most popular event!
-					
-				<img src="img/Amuseme4.jpg">
-	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="javascript.js"></script>
-</body>    
+			<h4 style='margin-left: 7%;'>Explore our most popular event!
+					[Harry Potter Land]</h4>
+			</div>
+		
+		<div style="display:inline-block;">
+		<img src="img/Amuseme4.jpg" style='width: 40%; margin-left: 7%; height: 375px;'>
+		</div>
+		<div class="conatiner-fluid padding">
+				<div class="row welcome text-mr-auto">
+					<div class="col-12">
+						<h4 style='margin-left: 7%;'>Then, experience our	most exhilarating ride!
+							[Jurrasic World]				
+
+						</h4> 
+						</div> 
+					</div>
+					<div class="col">
+						<h1>text over</h1>
+					<img src="https://image.smythstoys.com/images/brand-shops/jurassic-park/jurassic-world-hero-logo-v4.jpg" style=" width: 40%; margin-left: 7%; height: 375px;">
+				</div>
+			</div>
+		-->
+	<div class="col">
+		<div class="row">
+			<div class="card center" style="width: 60rem;">
+				<img class="card-img-top" src="img/Index img/Harry Potter.jpg" alt="Card image cap">
+				<div class="card-body">
+					<a href="Hairy Poter Land.html">
+					<h4 class="card-text">Explore our most popular attraction! [Hairy Pooter Land] &#187;</h4>
+					</a>
+				</div>
+			</div>
+			<div class="card center" style="width: 60rem;">
+				<img class="card-img-top" src="img/Index img/Jurrasic World.jpg" alt="Card image cap">
+				<div class="card-body">
+					<a href="Jurrasic.html">
+					<h4 class="card-text">Visit one of our most exhilarating rides! [Jurazic] &#187;
+					</h4>
+				</a>
+				</div>
+			</div>
+			<div class="card center" style="width: 65rem;">
+				<img class="card-img-top" src="img/Index img/Spider Man.jpg" alt="Card image cap">
+				<div class="card-body">
+					<a href="Spooder Man.html">
+					<h4 class="card-text">Come over to see our most recent attraction! [Spooder Man] &#187;</h4>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<br>
+	<br>
+	<br>
+	<a href="Rides.html">
+		<h2 class="display-4 text-center">Other Attractions &#187;</h2>
+	</a>
+   
+	<hr>
+
+	<img src="img\Index img\tripadvisor.jpg" style="margin-left: 15%; display: inline-block;">
+	<h4 class="ml-auto" style="display:inline-block;">After AmuseMe Amusement Park's first year success, TripAdvisor has claimed it one of the top ten amusement <br>parks in the
+		world.
+	</h4>
+
+	<hr>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+	 crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+	 crossorigin="anonymous"></script>
+	<script src="javascript.js"></script>
+</body>
 <html>
